# braintumor-using-cnn

./: .gitignore  README.md  brain_tumor_cnn.ipynb  main.ipynb  pyproject.toml
results/v1/: INFO.md  brain_tumor_cnn.ipynb
results/v2/: INFO.md
results/v3_final/: INFO.md  brain_tumor_cnn.ipynb
