[tool.poetry]
name = "braintumor-using-cnn"
version = "0.1.0"
description = ""
authors = ["JulioRaf4 <julio_tigger@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
